--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-        <activity
+        android:theme="@style/AppTheme"
+        >
+    <activity
             android:name="ru.hse.se.shugurov.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
