--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,8 @@
         >
         <activity
             android:name="ru.hse.se.shugurov.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
-            <intent-filter>
+            android:label="@string/app_name">
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -25,7 +24,7 @@
             android:value="@integer/google_play_services_version"/>
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBMc6O5oRadHxe62lCOf9k4MDsPlN57PE4"/>
+            android:value="AIzaSyA-zZpqPBUj9HfAfEvmg0BWq0DvbGA4uv0"/>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
