--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:value="@integer/google_play_services_version"/>
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBASO0EQAFn-n3QDwDzMyAFfc36NYSmqS4"/>
+            android:value="@string/google_api_key"/>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
