--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,28 @@
+buildscript {
+    repositories {
+        maven { url 'http://download.crashlytics.com/maven' }
+    }
+
+    dependencies {
+        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
+    }
+}
 apply plugin: 'android'
+apply plugin: 'crashlytics'
+
+repositories {
+    maven { url 'http://download.crashlytics.com/maven' }
+}
+
 
 android {
     compileSdkVersion 18
     buildToolsVersion '19.1.0'
-
     defaultConfig {
         minSdkVersion 8
         targetSdkVersion 19
         versionCode 2
-        versionName "1.05"
+        versionName '1.05'
     }
     buildTypes {
         release {
@@ -16,10 +30,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     compile 'com.android.support:appcompat-v7:+'
     compile 'com.google.android.gms:play-services:4.0.30'
+    compile 'com.crashlytics.android:crashlytics:1.+'
 }
