--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,18 @@
 buildscript {
     repositories {
         mavenCentral()
+        maven { url 'http://download.crashlytics.com/maven' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:0.11.+'
+        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
     }
 }
 
 allprojects {
     repositories {
+        maven { url 'http://dl.bintray.com/populov/maven' }
         mavenCentral()
+        maven { url 'http://download.crashlytics.com/maven' }
     }
 }
